force-app/main/default/objects/Contact/fields/LXD_Acepto_aviso_de_privacidad__c.field-meta.xml
<CustomField>
    <fullName>LXD_Acepto_aviso_de_privacidad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aceptó aviso de privacidad</label>
    <type>Checkbox</type>
</CustomField>