force-app/main/default/objects/Contact/fields/LXD_Atributos__c.field-meta.xml
<CustomField>
    <fullName>LXD_Atributos__c</fullName>
    <inlineHelpText>Atributos de la clave operativa</inlineHelpText>
    <label>Atributos</label>
    <type>TextArea</type>
</CustomField>