force-app/main/default/objects/Contact/fields/LXD_Banderas__c.field-meta.xml
<CustomField>
    <fullName>LXD_Banderas__c</fullName>
    <inlineHelpText>Programas de capacitación del técnico, vendedor, .....</inlineHelpText>
    <label>Banderas</label>
    <type>TextArea</type>
</CustomField>