force-app/main/default/objects/Contact/fields/LXD_Clave_o_Numero__c.field-meta.xml
<CustomField>
    <fullName>LXD_Clave_o_Numero__c</fullName>
    <label>Clave o Número</label>
    <length>18</length>
    <type>Text</type>
</CustomField>