force-app/main/default/objects/Contact/fields/LXD_Clave_operativa__c.field-meta.xml
<CustomField>
    <fullName>LXD_Clave_operativa__c</fullName>
    <inlineHelpText>Clave operativa</inlineHelpText>
    <label>Clave operativa</label>
    <type>TextArea</type>
</CustomField>