force-app/main/default/objects/Contact/fields/LXD_Contador__c.field-meta.xml
<CustomField>
    <fullName>LXD_Contador__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Contador</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>