force-app/main/default/objects/Contact/fields/LXD_Contrasena_personal__c.field-meta.xml
<CustomField>
    <fullName>LXD_Contrasena_personal__c</fullName>
    <label>Contraseña personal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>