force-app/main/default/objects/Contact/fields/LXD_Dato_secreto__c.field-meta.xml
<CustomField>
    <fullName>LXD_Dato_secreto__c</fullName>
    <inlineHelpText>Dato secreto del Técnico, Vendedor, .....</inlineHelpText>
    <label>Dato secreto</label>
    <type>TextArea</type>
</CustomField>