force-app/main/default/objects/Contact/fields/LXD_Edad__c.field-meta.xml
<CustomField>
    <fullName>LXD_Edad__c</fullName>
    <label>Edad</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>