force-app/main/default/objects/Contact/fields/LXD_Especifique_tipo_de_Identificacion__c.field-meta.xml
<CustomField>
    <fullName>LXD_Especifique_tipo_de_Identificacion__c</fullName>
    <label>Especifique tipo de Identificacion Perso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>