force-app/main/default/objects/Contact/fields/LXD_Estado_civil__c.field-meta.xml
<CustomField>
    <fullName>LXD_Estado_civil__c</fullName>
    <inlineHelpText>Estado civil del Técnico, Vendedor, .....</inlineHelpText>
    <label>Estado civil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Casado</fullName>
            </value>
            <value>
                <fullName>Soltero</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>