force-app/main/default/objects/Contact/fields/LXD_Estado_donde_Opera_el_Validador__c.field-meta.xml
<CustomField>
    <fullName>LXD_Estado_donde_Opera_el_Validador__c</fullName>
    <label>Estado donde Opera el Validador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LXD_Estado_donde_Opera_el_Validador</valueSetName>
    </valueSet>
</CustomField>