force-app/main/default/objects/Contact/fields/LXD_Estatus_de_la_clave_operativa__c.field-meta.xml
<CustomField>
    <fullName>LXD_Estatus_de_la_clave_operativa__c</fullName>
    <inlineHelpText>Estatus de la clave operativa</inlineHelpText>
    <label>Estatus de la clave operativa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>Baja Temporal</fullName>
            </value>
            <value>
                <fullName>Boletinado</fullName>
            </value>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Suspendido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>