force-app/main/default/objects/Contact/fields/LXD_Estatus_de_la_relacion__c.field-meta.xml
<CustomField>
    <fullName>LXD_Estatus_de_la_relacion__c</fullName>
    <inlineHelpText>Estatus de la relación</inlineHelpText>
    <label>Estatus de la relación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>Baja logica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>