force-app/main/default/objects/Contact/fields/LXD_Fecha_alta__c.field-meta.xml
<CustomField>
    <fullName>LXD_Fecha_alta__c</fullName>
    <inlineHelpText>Fecha de alta</inlineHelpText>
    <label>Fecha alta</label>
    <type>DateTime</type>
</CustomField>