force-app/main/default/objects/Contact/fields/LXD_Funcion_que_desempena__c.field-meta.xml
<CustomField>
    <fullName>LXD_Funcion_que_desempena__c</fullName>
    <label>Función que desempeña</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LXD_Funcion_que_desempena</valueSetName>
    </valueSet>
</CustomField>