force-app/main/default/objects/Contact/fields/LXD_Genero__c.field-meta.xml
<CustomField>
    <fullName>LXD_Genero__c</fullName>
    <inlineHelpText>Género del Técnico, Vendedor, .....</inlineHelpText>
    <label>Genero</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Masculino</fullName>
            </value>
            <value>
                <fullName>Femenino</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>