force-app/main/default/objects/Contact/fields/LXD_Gestiona__c.field-meta.xml
<CustomField>
    <fullName>LXD_Gestiona__c</fullName>
    <label>Gestiona</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LXD_Gestiona</valueSetName>
    </valueSet>
</CustomField>