force-app/main/default/objects/Contact/fields/LXD_Identificacion_Personal__c.field-meta.xml
<CustomField>
    <fullName>LXD_Identificacion_Personal__c</fullName>
    <label>Identificación Personal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LXD_Identificacion_Personal</valueSetName>
    </valueSet>
</CustomField>