force-app/main/default/objects/Contact/fields/LXD_Master__c.field-meta.xml
<CustomField>
    <fullName>LXD_Master__c</fullName>
    <label>Master</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Revisor</fullName>
            </value>
            <value>
                <fullName>Autorizador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>