force-app/main/default/objects/Contact/fields/LXD_Master_del_Validador__c.field-meta.xml
<CustomField>
    <fullName>LXD_Master_del_Validador__c</fullName>
    <label>Master del Validador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LXD_Master_del_Validador</valueSetName>
    </valueSet>
</CustomField>