force-app/main/default/objects/Contact/fields/LXD_Nacionalidad__c.field-meta.xml
<CustomField>
    <fullName>LXD_Nacionalidad__c</fullName>
    <inlineHelpText>Nacionalidad del Técnico, Vendedor, .....</inlineHelpText>
    <label>Nacionalidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COLOMBIANA</fullName>
            </value>
            <value>
                <fullName>COSTARRICENSE</fullName>
            </value>
            <value>
                <fullName>CUBANO</fullName>
            </value>
            <value>
                <fullName>GUATEMALTECA</fullName>
            </value>
            <value>
                <fullName>HONDUREÑA</fullName>
            </value>
            <value>
                <fullName>MEXICANA</fullName>
            </value>
            <value>
                <fullName>NICARAGUENSE</fullName>
            </value>
            <value>
                <fullName>PANAMEÑA</fullName>
            </value>
            <value>
                <fullName>SALVADOREÑA</fullName>
            </value>
            <value>
                <fullName>VENEZOLANA</fullName>
            </value>
            <value>
                <fullName>DOMINICANA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>