force-app/main/default/objects/Contact/fields/LXD_Notas_2__c.field-meta.xml
<CustomField>
    <fullName>LXD_Notas_2__c</fullName>
    <inlineHelpText>Notas acerca del Técnico, Vendedor, .....</inlineHelpText>
    <label>Notas 2</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>