force-app/main/default/objects/Contact/fields/LXD_Numero_ID__c.field-meta.xml
<CustomField>
    <fullName>LXD_Numero_ID__c</fullName>
    <inlineHelpText>Número de identificación del Técnico, Vendedor, ....</inlineHelpText>
    <label>Numero ID</label>
    <type>TextArea</type>
</CustomField>