force-app/main/default/objects/Contact/fields/LXD_PaisDondeOpera__c.field-meta.xml
<CustomField>
    <fullName>LXD_PaisDondeOpera__c</fullName>
    <label>País donde opera</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>México</fullName>
            </value>
            <value>
                <fullName>Costa Rica</fullName>
            </value>
            <value>
                <fullName>El Salvador</fullName>
            </value>
            <value>
                <fullName>Honduras</fullName>
            </value>
            <value>
                <fullName>Nicaragua</fullName>
            </value>
            <value>
                <fullName>Panamá</fullName>
            </value>
            <value>
                <fullName>República Dominicana</fullName>
            </value>
            <value>
                <fullName>Guatemala</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>