force-app/main/default/objects/Contact/fields/LXD_RFC__c.field-meta.xml
<CustomField>
    <fullName>LXD_RFC__c</fullName>
    <label>RFC</label>
    <length>10</length>
    <type>Text</type>
</CustomField>