force-app/main/default/objects/Contact/fields/LXD_Telefono_Casa__c.field-meta.xml
<CustomField>
    <fullName>LXD_Telefono_Casa__c</fullName>
    <label>Teléfono Casa</label>
    <type>Phone</type>
</CustomField>