force-app/main/default/objects/Contact/fields/LXD_Telefono_Celular__c.field-meta.xml
<CustomField>
    <fullName>LXD_Telefono_Celular__c</fullName>
    <label>Télefono Celular</label>
    <type>Phone</type>
</CustomField>