force-app/main/default/objects/Contact/fields/LXD_Telefono_Oficina__c.field-meta.xml
<CustomField>
    <fullName>LXD_Telefono_Oficina__c</fullName>
    <label>Teléfono Oficina</label>
    <type>Phone</type>
</CustomField>