force-app/main/default/objects/Contact/fields/LXD_Telefono_Recados__c.field-meta.xml
<CustomField>
    <fullName>LXD_Telefono_Recados__c</fullName>
    <label>Teléfono Recados</label>
    <type>Phone</type>
</CustomField>