force-app/main/default/objects/Contact/fields/LXD_Tipo_de_clave_operativa__c.field-meta.xml
<CustomField>
    <fullName>LXD_Tipo_de_clave_operativa__c</fullName>
    <label>Tipo de clave operativa</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LXD_Tipo_de_clave_operativa</valueSetName>
    </valueSet>
</CustomField>