force-app/main/default/objects/Contact/fields/LXD_Tipo_ID__c.field-meta.xml
<CustomField>
    <fullName>LXD_Tipo_ID__c</fullName>
    <inlineHelpText>Tipo de identificación Técnico, Vendedor, .....</inlineHelpText>
    <label>Tipo ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credencial para votar (INE)</fullName>
            </value>
            <value>
                <fullName>Licencia para conducir</fullName>
            </value>
            <value>
                <fullName>Pasaporte</fullName>
            </value>
            <value>
                <fullName>Cartilla Militar</fullName>
            </value>
            <value>
                <fullName>Credencial IMSS</fullName>
            </value>
            <value>
                <fullName>Excepción</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>