force-app/main/default/objects/Contact/fields/LXD_TipoPerfil_del__c.field-meta.xml
<CustomField>
    <fullName>LXD_TipoPerfil_del__c</fullName>
    <label>Tipo de perfil</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solicitante</fullName>
            </value>
            <value>
                <fullName>Autorizador</fullName>
            </value>
            <value>
                <fullName>Revisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>