force-app/main/default/objects/Contact/fields/MX_SKY_ColFact__c.field-meta.xml
<CustomField>
    <fullName>MX_SKY_ColFact__c</fullName>
    <label>Colonia de facturación</label>
    <length>50</length>
    <type>Text</type>
</CustomField>