force-app/main/default/objects/Contact/fields/MX_SKY_MuniAlca__c.field-meta.xml
<CustomField>
    <fullName>MX_SKY_MuniAlca__c</fullName>
    <label>Municipio / Alcaldia</label>
    <length>30</length>
    <type>Text</type>
</CustomField>