force-app/main/default/objects/Contact/fields/MX_SKY_NumExtFact__c.field-meta.xml
<CustomField>
    <fullName>MX_SKY_NumExtFact__c</fullName>
    <label>Número exterior facturación</label>
    <length>10</length>
    <type>Text</type>
</CustomField>