force-app/main/default/objects/Contact/fields/SF_SearchValue__c.field-meta.xml
<CustomField>
    <fullName>SF_SearchValue__c</fullName>
    <label>SF_SearchValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>