force-app/main/default/objects/Contact/recordTypes/LXD_Contacto.recordType-meta.xml
<RecordType>
    <fullName>LXD_Contacto</fullName>
    <active>true</active>
    <label>Clave Operativa</label>
</RecordType>