force-app/main/default/objects/Contact/recordTypes/LXD_Contacto_Entidad.recordType-meta.xml
<RecordType>
    <fullName>LXD_Contacto_Entidad</fullName>
    <active>true</active>
    <label>Contacto Entidad</label>
</RecordType>