force-app/main/default/objects/Contact/validationRules/LXD_Validacion_fecha_de_Nacimiento.validationRule-meta.xml
<ValidationRule>
    <fullName>LXD_Validacion_fecha_de_Nacimiento</fullName>
    <active>true</active>
    <description>Validar que la fecha de nacimiento no sea mayor o igual a la fecha actual.</description>
    <errorConditionFormula>Birthdate &gt;= TODAY()</errorConditionFormula>
    <errorMessage>No se puede seleccionar una fecha de nacimiento posterior a la fecha actual.</errorMessage>
</ValidationRule>